7951
it affects code everywhere as far as I can tell:

{code}
class Ok extends util.DynamicVariable[Int](0)
class Bippy extends tools.nsc.Settings()
{code}

causes

{code}
t6039.scala:2: error: object nsc is not a member of package tools
class Bippy extends tools.nsc.Settings()
                          ^
one error found
{code}

note that there is no error for the first line
